--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
 <a href="javascript:Confirm('确定删除?', function (){alert('ok')}, function (){alert('cancel');});">显示确认对话框</a>
+<a href="javascript:Dialog('我是一个对话框', function (){alert('ok')});">显示消息提示框</a>
 </body>
 </html>
